--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <!-- Open Graph for Social Sharing -->
   <meta property="og:title" content="FlipMatch - Neon Memory Game">
   <meta property="og:description" content="A cyberpunk-style memory game where you flip and match neon emoji cards. Play now!">
-  <meta property="og:image" content="https://yourdomain.com/assets/flipmatch-preview.jpg">
-  <meta property="og:url" content="https://yourdomain.com">
+  <meta property="og:url" content="https://sumuk007.github.io/FlipMatch-game/">
   <meta property="og:type" content="website">
 
   <!-- Favicon -->
